package com.subterranean_security.crimson.core.proto.net;

message FileListlet {
	required string name = 1;
	required bool dir = 3;
	optional int64 mtime = 4;
	optional int64 size = 5;
}

message FileListing_RQ {
	optional bool up = 1;
	optional string down = 2;
	optional int32 clientid = 3;
	optional int32 viewerid = 4;
}

message FileListing_RS {
	repeated FileListlet listing = 1;
	optional int32 viewerid = 2;
}