package com.subterranean_security.crimson.core.proto;

import "net/sequences/Delta.proto";

message RQ_Login {
	required string username = 1;
}

message RQ_LoginChallenge {
	required string salt = 1;
}

message RS_LoginChallenge {
	required string result = 1;
}

message RS_Login {
	required bool response = 1;
	optional EV_ServerProfileDelta spd = 2;
	optional EV_ViewerProfileDelta vpd = 3;
}

